add casbin middleware
